# engram

./: .gitignore  AGENT.md  CHANGELOG.md  Cargo.toml  README.md  SPEC.md  engram.toml  lefthook.yml
.github/workflows/: bench.yml  ci.yml  deploy-website.yml  publish-npm.yml  publish-python.yml  publish-rust.yml
crates/engram-consolidate/: Cargo.toml  README.md
crates/engram-consolidate/src/: analyze.rs  apply.rs  error.rs  lib.rs  preview.rs
crates/engram-consolidate/tests/: integration.rs
crates/engram-core/: AGENT.md  Cargo.toml  README.md
crates/engram-core/src/: cli.rs  config.rs  config_handler.rs  config_loader.rs  consolidate_handler.rs  consolidation_log_handler.rs  delete_handler.rs  dispatch.rs  error.rs  export_handler.rs  import_handler.rs  indexes.rs  init_handler.rs  insights_handler.rs  judge_handler.rs  lib.rs  lock_helpers.rs  main.rs  output.rs  persistence.rs  protocol.rs  rank_fusion.rs  reembed_handler.rs  search_handler.rs  server.rs  status_handler.rs  store_handler.rs  tags_normalize.rs  timestamp.rs  train_handler.rs
crates/engram-core/src/migrate_handler/: logic.rs  mod.rs
crates/engram-core/src/migrations/: embedding_model_v1.rs  feedback_query_id_v1.rs  fts_tokenizer_v1.rs  mod.rs  tags_format_v1.rs
crates/engram-core/tests/: cli_integration.rs  cli_smoke_test.rs  config_handler_test.rs  config_loading.rs  config_test.rs  consolidate_prune_test.rs  consolidation_log_handler_test.rs  delete_handler_test.rs  e2e_full_cycle.rs  e2e_handler_coverage.rs  e2e_router_learning.rs  embedding_model_v1_test.rs  error_display.rs  export_handler_test.rs  feedback_query_id_migration.rs  fts_tokenizer_migration_test.rs  import_handler_test.rs  indexes_operations.rs  init_handler_test.rs  insights_handler_test.rs  legacy_db_detection_test.rs  llm_client_caching.rs  lock_helpers_poison_recovery.rs  migrate_handler_test.rs  persistence_disk.rs  preview_dedup_stem_regression_test.rs  protocol_serde.rs  reembed_handler_test.rs  routing_instrumentation.rs  rwlock_indexset_parallel.rs  search_degraded_fallback.rs  search_excludes_superseded.rs  search_latency_bench.rs  search_store_parallel.rs  search_tag_filter.rs  server_integration.rs  store_dedup.rs  store_indexed_flag.rs  tag_format_migration.rs  train_handler_test.rs
crates/engram-embeddings/: Cargo.toml  README.md
crates/engram-embeddings/src/: cache.rs  embedder.rs  error.rs  hyde.rs  lib.rs
crates/engram-embeddings/tests/: concurrency.rs  integration.rs
crates/engram-hnsw/: Cargo.toml  README.md
crates/engram-hnsw/benches/: hnsw_bench.rs  recall_bench.rs
crates/engram-hnsw/src/: error.rs  graph.rs  lib.rs  node.rs  operations.rs  search.rs  serialize.rs  similarity.rs
crates/engram-hnsw/tests/: recall.rs  test_graph.rs  test_node.rs  test_operations.rs  test_serialize.rs  test_similarity.rs
crates/engram-judge/: Cargo.toml  README.md
crates/engram-judge/src/: combined.rs  error.rs  heuristic.rs  lib.rs  llm_judge.rs  score.rs
crates/engram-judge/tests/: integration.rs
crates/engram-llm-client/: Cargo.toml  README.md
crates/engram-llm-client/src/: error.rs  lib.rs  local.rs  ollama.rs  ollama_text.rs  openai.rs  provider.rs  retry.rs  voyage.rs
crates/engram-llm-client/tests/: integration.rs  local_test.rs
crates/engram-router/: Cargo.toml  README.md
crates/engram-router/benches/: router_bench.rs
crates/engram-router/src/: action.rs  defaults.rs  error.rs  lib.rs  mode.rs  q_table.rs  router.rs
crates/engram-router/tests/: test_mode.rs  test_q_table.rs  test_router.rs
crates/engram-storage/: Cargo.toml  README.md
crates/engram-storage/benches/: storage_bench.rs
crates/engram-storage/src/: consolidation.rs  consolidation_log.rs  database.rs  error.rs  fts.rs  lib.rs  memory.rs  q_table_store.rs  routing_log.rs  schema.rs
crates/engram-storage/tests/: test_consolidation.rs  test_fts.rs  test_memory.rs  test_q_table_store.rs  test_schema.rs
crates/engram-tui/: Cargo.toml  README.md
crates/engram-tui/src/: actions.rs  app.rs  main.rs  overlays.rs  paths.rs  theme.rs
crates/engram-tui/src/app/: keys.rs  mod.rs
crates/engram-tui/src/data/: database.rs  mod.rs  socket.rs
crates/engram-tui/src/init/: config.rs  existing_config.rs  mod.rs  navigation.rs  render.rs  render_health.rs  render_status.rs  wizard.rs
crates/engram-tui/src/tabs/: memories.rs  mod.rs  models.rs  qlearning.rs  routing.rs  status.rs
crates/engram-tui/src/tabs/memories/: mod.rs  render.rs
crates/engram-tui/src/tabs/models/: mod.rs  models_state.rs
crates/engram-tui/src/tabs/search/: mod.rs  search_state.rs
mcp-server/: package-lock.json  package.json  tsconfig.json
mcp-server/src/: index.ts  lifecycle.ts  project-dir.test.ts  socket-client.test.ts  socket-client.ts  tools.ts  types.ts
trainer/: README.md  pyproject.toml
trainer/src/engram_trainer/: __main__.py  causal.py  classifier.py  data.py  finetune.py  insights.py  meta.py  onnx_export.py  protocol.py  quality_gate.py  ranker.py  temporal.py  trainer.py  types.py
trainer/tests/: conftest.py  test_artifacts.py  test_causal.py  test_classifier.py  test_data.py  test_e2e.py  test_finetune.py  test_insights.py  test_meta.py  test_protocol.py  test_quality_gate.py  test_ranker.py  test_temporal.py  test_trainer.py
website/: .gitignore  next.config.mjs  package-lock.json  package.json  tsconfig.json
website/app/: global.css  layout.tsx  page.tsx
website/app/[lang]/: layout.tsx  page.tsx
website/app/[lang]/docs/: layout.tsx
website/components/landing/: brain-mesh.tsx  cta.tsx  features.tsx  footer.tsx  hero-scene-canvas.tsx  hero-scene.tsx  hero.tsx  how-it-works.tsx  landing-page.tsx  quick-start.tsx  section.tsx  translations.ts
website/content/docs/en/: architecture.mdx  cli.mdx  configuration.mdx  consolidation.mdx  data-model.mdx  error-codes.mdx  getting-started.mdx  hybrid-search.mdx  index.mdx  mcp-tools.mdx  meta.json  protocol.mdx  q-learning.mdx  trainer.mdx
website/content/docs/ru/: architecture.mdx  cli.mdx  configuration.mdx  consolidation.mdx  data-model.mdx  (+9 more)
website/lib/: i18n.ts  source.ts
(+1 files in other folders)
