[workspace]
members = [
    "crates/engram-consolidate",
    "crates/engram-core",
    "crates/engram-embeddings",
    "crates/engram-hnsw",
    "crates/engram-judge",
    "crates/engram-llm-client",
    "crates/engram-router",
    "crates/engram-storage",
    "crates/engram-tui",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/supostat/engram"
authors = ["Engram Contributors"]
homepage = "https://github.com/supostat/engram"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
