[package]
name = "engram-consolidate"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Memory consolidation: preview, analyze, apply"

[dependencies]
engram-storage = { path = "../engram-storage" }
engram-llm-client = { path = "../engram-llm-client" }
rusqlite = { version = "0.39", features = ["bundled"] }

[dev-dependencies]
