[package]
name = "engram-consolidate"
version = "0.5.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Memory consolidation: preview, analyze, apply"
readme = "README.md"
keywords = ["deduplication", "consolidation", "memory", "merge"]
categories = ["algorithms"]

[lib]
bench = false

[dependencies]
engram-storage = { path = "../engram-storage", version = "0.5.0" }
engram-llm-client = { path = "../engram-llm-client", version = "0.5.0" }
rusqlite = { version = "0.39", features = ["bundled"] }

[dev-dependencies]
