[package]
name = "engram-memory"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Core binary and shared infrastructure for Engram memory system"
readme = "README.md"
keywords = ["memory", "ai-agent", "mcp", "cli", "semantic-search"]
categories = ["command-line-utilities"]

[lib]
name = "engram_core"
path = "src/lib.rs"

[[bin]]
name = "engram"
path = "src/main.rs"

[dependencies]
engram-consolidate = { path = "../engram-consolidate", version = "0.2.0" }
engram-storage = { path = "../engram-storage", version = "0.2.0" }
engram-hnsw = { path = "../engram-hnsw", version = "0.2.0" }
engram-embeddings = { path = "../engram-embeddings", version = "0.2.0" }
engram-llm-client = { path = "../engram-llm-client", version = "0.2.0", features = ["local"] }
engram-judge = { path = "../engram-judge", version = "0.2.0" }
engram-router = { path = "../engram-router", version = "0.2.0" }
rusqlite = { version = "0.39", features = ["bundled", "vtab"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal", "sync", "time", "process"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
hdrhistogram = "7.5"
rusqlite = { version = "0.39", features = ["bundled", "vtab"] }
