[package]
name = "engram-embeddings"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Three-field embedding system with HyDE auto-detection and caching"
readme = "README.md"
keywords = ["embeddings", "hyde", "semantic-search", "vector"]
categories = ["science"]

[dependencies]
engram-llm-client = { path = "../engram-llm-client" }
