[package]
name = "engram-hnsw"
version = "0.6.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "HNSW approximate nearest neighbor search"
readme = "README.md"
keywords = ["hnsw", "nearest-neighbor", "vector-search", "cosine-similarity"]
categories = ["algorithms", "data-structures"]

[lib]
bench = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9"

[[bench]]
name = "hnsw_bench"
harness = false

[[bench]]
name = "recall_bench"
harness = false
