[package]
name = "engram-judge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Heuristic and LLM-based memory relevance scoring"
readme = "README.md"
keywords = ["scoring", "quality", "llm-judge", "heuristic"]
categories = ["algorithms"]

[dependencies]
engram-llm-client = { path = "../engram-llm-client" }
serde_json = "1"
