[package]
name = "engram-judge"
version = "0.5.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Heuristic and LLM-based memory relevance scoring"
readme = "README.md"
keywords = ["scoring", "quality", "llm-judge", "heuristic"]
categories = ["algorithms"]

[lib]
bench = false

[dependencies]
engram-llm-client = { path = "../engram-llm-client", version = "0.5.0" }
serde_json = "1"
