[package]
name = "engram-llm-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "LLM provider traits with Voyage and OpenAI implementations"
readme = "README.md"
keywords = ["llm", "openai", "voyage", "onnx", "embeddings"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ort = { version = "2.0.0-rc.12", optional = true }
tokenizers = { version = "0.21", optional = true, default-features = false, features = ["onig"] }
ndarray = { version = "0.17", optional = true }

[features]
local = ["ort", "tokenizers", "ndarray"]
