[package]
name = "engram-router"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Hierarchical Q-Learning router"
readme = "README.md"
keywords = ["q-learning", "reinforcement-learning", "routing", "adaptive"]
categories = ["algorithms"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9"

[[bench]]
name = "router_bench"
harness = false
