[package]
name = "engram-router"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Hierarchical adaptive routing (contextual bandit)"
readme = "README.md"
keywords = ["q-learning", "reinforcement", "routing", "adaptive"]
categories = ["algorithms"]

[lib]
bench = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9"

[[bench]]
name = "router_bench"
harness = false
