[package]
name = "engram-storage"
version = "0.1.0"
edition.workspace = true
description = "SQLite storage with FTS5"

[dependencies]
rusqlite = { version = "0.39", features = ["bundled", "vtab"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9"

[[bench]]
name = "storage_bench"
harness = false
