[package]
name = "engram-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "SQLite storage with FTS5"
readme = "README.md"
keywords = ["sqlite", "fts5", "memory-storage", "full-text-search"]
categories = ["database"]

[dependencies]
rusqlite = { version = "0.39", features = ["bundled", "vtab"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9"

[[bench]]
name = "storage_bench"
harness = false
